@@ -13,7 +13,7 @@
 
 __version__='$Revision: 1.7 $'[11:-2]
 
-import string, math, random, whrandom
+import string, math, random
 import DocumentTemplate.sequence
 from DateTime.DateTime import DateTime
 
@@ -22,7 +22,6 @@ utility_builtins = {}
 utility_builtins['string'] = string
 utility_builtins['math'] = math
 utility_builtins['random'] = random
-utility_builtins['whrandom'] = whrandom
 utility_builtins['sequence'] = DocumentTemplate.sequence
 utility_builtins['DateTime'] = DateTime
 
